# dtlc

./: CHANGELOG.md  deplambda.cabal  dtlc.cabal  flake.nix  readme.md
app/: DepLambda.hs  DepParser.hs  Lambda.hs  Main.hs  Parser.hs  Repl.hs
src/: DepLambda.hs  DepParser.hs  Lambda.hs  Repl.hs
src/DTLC/: Lambda.hs  Parser.hs  Repl.hs
tests/: test.hs
